Enhance scrollbar styling and improve Dashboard layout; fix class name casing and adjust element spacing

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,23 @@ body {
 .bor {
     border: 1px solid red;
 }
+
+
+/* Custom scrollbar styling */
+::-webkit-scrollbar {
+    width: 9px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--bg-main);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #555555;
+    border-radius: 10px;
+    border: 3px solid var(--bg-main);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--button-color);
+}
